# mymath

./: .gitignore  CMakeLists.txt  app.c
.github/workflows/: test-all.yml
lib/: CMakeLists.txt  mymath.c  mymath.h
tests/: CMakeLists.txt  mymath.test.c
tests/cmake/Modules/: FindCriterion.cmake
